--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;800&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,6 +14,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    font-family : "Cairo !important";
+}
+
+html {
+  font-family : "Cairo !important";
 }
 
 a {
@@ -33,6 +40,7 @@ a {
   font-size: 20px;
   font-weight: bold;
   margin-left: 10px;
+  font-family : "Cairo";
 }
 
 @media  screen and (max-width : 800px) {
